--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ h1 {
 
 .linea {
   background: white;
-  height: 3px;
+  height: 2px;
   width: 100%;
   display: block;
 }
@@ -32,11 +32,17 @@ h1 {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
   width: 95%;
-  margin: auto;
+  margin: 0px auto;
+  text-align: center;
   row-gap: 10px;
   column-gap: 10px;
   padding: 40px 0;
   overflow: hidden;
+}
+
+.contorno {
+    border: 1px solid white;
+    border-radius: 5px;
 }
 
 .galeria > a {
@@ -46,11 +52,14 @@ h1 {
 }
 
 .galeria img {
-  width: 100%;
+  width: 90%;
+  background-color: white;
+  /* padding: 5px 0; */
+  margin: 5px;
   vertical-align: top;
   height: 300px;
   object-fit: contain;
-  border-radius: 4px;
+  border-radius: 10px;
   border: 1px solid white;
   transition: transform 5s;
   filter: grayscale(100%);
@@ -118,4 +127,10 @@ h1 {
     top: 20px;
     right: 20px;
   }
+
+  .galeria img {
+      height: 150px;
+  }
+
+
 }
