--- a/style.css
+++ b/style.css
@@ -97,7 +97,7 @@ h1 {
 .close {
   display: block;
   position: absolute;
-  top: 80px;
+  top: 90px;
   right: 295px;
   color: white;
   text-decoration: none;
@@ -124,8 +124,8 @@ h1 {
   }
 
   .close {
-    top: 20px;
-    right: 20px;
+    top: 34%;
+    right: 3%;
   }
 
   .galeria img {
@@ -136,5 +136,5 @@ h1 {
     width: 80vw;
     max-height: 80vh;
   }
-  
+
 }
