--- a/style.css
+++ b/style.css
@@ -138,3 +138,11 @@ h1 {
   }
 
 }
+
+@media screen and (min-width: 768px) {
+    .close {
+        top: 30%;
+        right: 16%;
+      }
+    
+}
