--- a/style.css
+++ b/style.css
@@ -139,7 +139,7 @@ h1 {
 
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (max-width: 768px) {
     .close {
         top: 30%;
         right: 16%;
